Adding mavenOpts to Jenkins build